--- a/automacao.html
+++ b/automacao.html
@@ -353,11 +353,11 @@ footer a:hover {
     </div>
     <div class="videos">
         <div class="background-section" id="especial2">
-            <video src="img/technology background 1.mp4" autoplay loop muted></video>
+            <video src="technology background 1.mp4" autoplay loop muted></video>
         </div>
         <ul>
             <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 1</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -365,7 +365,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 2</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -373,7 +373,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 3</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -381,7 +381,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 4</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -391,7 +391,7 @@ footer a:hover {
         </ul>
         <ul>
             <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 5</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -399,7 +399,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 6</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -407,7 +407,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 7</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -415,7 +415,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 8</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
