--- a/dados.html
+++ b/dados.html
@@ -354,11 +354,11 @@ footer a:hover {
     </div>
     <div class="videos">
         <div class="background-section" id="especial2">
-            <video src="img/technology background 1.mp4" autoplay loop muted></video>
+            <video src="technology background 1.mp4" autoplay loop muted></video>
         </div>
         <ul>
             <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 1</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -366,7 +366,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 2</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -374,7 +374,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 3</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -382,7 +382,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 4</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -392,7 +392,7 @@ footer a:hover {
         </ul>
         <ul>
             <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 5</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -400,7 +400,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 6</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -408,7 +408,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 7</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -416,7 +416,7 @@ footer a:hover {
                 </div>
               </div></li>
               <li><div class="card" style="width: 18rem;">
-                <img src="img/html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
+                <img src="html-css-collage-concept-with-person.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Aula 8</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
