--- a/mobile.html
+++ b/mobile.html
@@ -21,7 +21,7 @@ body {
 
 /* Estilos para o contêiner principal */
 #opb {
-  background-image: url(img/image.png);
+  background-image: url(image.png);
   background-repeat: no-repeat;
   background-size: 100%;
   /* padding-right: 10px;
@@ -272,15 +272,15 @@ body {
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          <img src="img/baixados1.png" alt="" />
+          <img src="baixados1.png" alt="" />
           <p>Construa telas incríveis com excelente usabilidade e navegação.</p>
         </div>
         <div class="col">
-          <img src="img/baixados.png" alt="" />
+          <img src="baixados.png" alt="" />
           <p>Construa telas incríveis com excelente usabilidade e navegação.</p>
         </div>
         <div class="col">
-          <img src="img/baixados2.png" alt="" />
+          <img src="baixados2.png" alt="" />
           <p>Construa telas incríveis com excelente usabilidade e navegação.</p>
         </div>
       </div>
@@ -311,7 +311,7 @@ body {
 
     <div class="card-group">
       <div class="card" id="card-body">
-        <img src="img/ini.png" class="card-img-top" id="imgcard" alt="..." />
+        <img src="ini.png" class="card-img-top" id="imgcard" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Iniciante</h5>
           <p class="card-text">
@@ -320,7 +320,7 @@ body {
         </div>
       </div>
       <div class="card" id="card-body">
-        <img src="img/inter.png" class="card-img-top" id="imgcard" alt="..." />
+        <img src="inter.png" class="card-img-top" id="imgcard" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Intermediario</h5>
           <p class="card-text">
@@ -330,7 +330,7 @@ body {
         </div>
       </div>
       <div class="card" id="card-body">
-        <img src="img/avança.png" class="card-img-top" id="imgcard" alt="..." />
+        <img src="avança.png" class="card-img-top" id="imgcard" alt="..." />
         <div class="card-body">
           <h5 class="card-title">Avançado</h5>
           <p class="card-text">
